--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -42,4 +42,4 @@
 -->
 <!-- disable button if the text box is empty-->
 <input type="text" [(ngModel)]="EmployeName">
-<button class="btn btn-primary" [disabled]="EmployeName===''"(click)="OnAddEmployee()">Add </button>
+<button class="btn btn-primary" [disabled]="EmployeName===''"(click)="EmployeName=''">Reset </button>
